add function to Полезные фонкции.md

--- a/THEORY/Полезные фонкции.md
+++ b/THEORY/Полезные фонкции.md
@@ -8,7 +8,19 @@
 def isSimple(n): #название поставь какое удобно
     return n > 1 and all(n % i for i in range(2, int(n**0.5) + 1))
 ```
+##### Как работает?
 
 - проверка `n > 1` - простые числа всегда больше 1
 - далее генератор, который генерирует остатки деления числа `n` на `i` в промежутке от `2` до `int(n**0.5)+1` - корня из `n`
 - функция `all()` возвращает `True` только когда все аргументы(в нашем случае остатки) ненулевые (эквивалентны `True`)
+
+## Поиск всех делителей числа
+
+```python
+def f(n): 
+    return {x for d in range(2, int(n**0.5)+1)for x in (d, n//d) if n%d == 0}
+```
+- возвращает **множество** делителей(чтобы не было повторов)
+- 
+
+
