add info for 2nd func

--- a/THEORY/Полезные фонкции.md
+++ b/THEORY/Полезные фонкции.md
@@ -21,6 +21,6 @@ def f(n):
     return {x for d in range(2, int(n**0.5)+1)for x in (d, n//d) if n%d == 0}
 ```
 - возвращает **множество** делителей(чтобы не было повторов)
-- 
-
+- `for d in range(2, int(n**0.5)+1)` - перебираем число `d` от `2` до корня из `n`
+- `x in (d, n//d) if n%d == 0` - из "удачных" `d` добавляем в множество само `d` и обратное ему `n//d`
 
