--- a/THEORY/Полезные фонкции.md
+++ b/THEORY/Полезные фонкции.md
@@ -8,7 +8,7 @@
 def isSimple(n): #название поставь какое удобно
     return n > 1 and all(n % i for i in range(2, int(n**0.5) + 1))
 ```
-##### Как работает?
+### Как работает?
 
 - проверка `n > 1` - простые числа всегда больше 1
 - далее генератор, который генерирует остатки деления числа `n` на `i` в промежутке от `2` до `int(n**0.5)+1` - корня из `n`
@@ -20,6 +20,9 @@ def isSimple(n): #название поставь какое удобно
 def f(n): 
     return {x for d in range(2, int(n**0.5)+1)for x in (d, n//d) if n%d == 0}
 ```
+
+### Как работает?
+
 - возвращает **множество** делителей(чтобы не было повторов)
 - `for d in range(2, int(n**0.5)+1)` - перебираем число `d` от `2` до корня из `n`
 - `x in (d, n//d) if n%d == 0` - из "удачных" `d` добавляем в множество само `d` и обратное ему `n//d`
